# grimm

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  depends.cmake
potato/: .clang-format  .clang-tidy  CMakeLists.txt
potato/bin_codegen/: CMakeLists.txt
potato/bin_codegen/source/: codegen_cxx.h  codegen_generator.cpp  codegen_main.cpp  codegen_schema.cpp  generator.h
potato/bin_codegen/source/generators/: schema_header_gen.cpp  schema_source_gen.cpp
potato/bin_editor/: CMakeLists.txt
potato/bin_editor/source/: CMakeLists.txt  commands.h  edit_components.cpp  edit_components.h  scene_doc.cpp  scene_doc.h  settings.h  shell_app.cpp  shell_app.h
potato/bin_editor/source/editors/: CMakeLists.txt  asset_editor.cpp  asset_editor.h  game_editor.cpp  log_editor.cpp  log_editor.h  material_editor.cpp  material_editor.h  scene_editor.cpp  scene_editor.h
potato/bin_editor/source/scene/: CMakeLists.txt  edit_component.h
potato/bin_headerify/: CMakeLists.txt
potato/bin_recon/: CMakeLists.txt
potato/bin_recon/schema/: importer_configs.sap
potato/bin_recon/source/: CMakeLists.txt  asset_database.cpp  asset_database.h  file_hash_cache.h  importer.cpp  importer_context.cpp  importer_context.h  importer_factory.cpp  importer_factory.h  posql.cpp  posql.h  recon_app.cpp  recon_app.h  recon_config.cpp  recon_config.h  recon_log_sink.h
potato/bin_recon/source/importers/: CMakeLists.txt  copy_importer.cpp  copy_importer.h  folder_importer.h  hlsl_importer.cpp  hlsl_importer.h  ignore_importer.h  json_importer.cpp  json_importer.h  material_importer.cpp  material_importer.h  model_importer.cpp  model_importer.h
potato/bin_shell/: CMakeLists.txt
potato/bin_shell/schema/: components.sap  resource.sap  scene.sap
potato/bin_shell/source/: CMakeLists.txt  arcball.cpp  camera.cpp  camera_controller.cpp  edit_components.cpp  edit_components.h  editor.cpp  log_history.cpp  scene.cpp  scene_doc.cpp  settings.h  shell_app.cpp  shell_app.h
potato/bin_shell/source/editors/: CMakeLists.txt  asset_browser.cpp  asset_browser.h  asset_editor.cpp  asset_editor.h  game_editor.cpp  game_editor.h  log_editor.cpp  log_editor.h  log_window.cpp  log_window.h  material_editor.cpp  material_editor.h  scene_editor.cpp  scene_editor.h
potato/bin_shell/source/ui/: CMakeLists.txt  action.cpp  command_palette.cpp  editor_group.cpp  editor_group.h  menu.cpp
potato/libaudio/: CMakeLists.txt
potato/libaudio/schema/: sound.sap
potato/libaudio/source/: audio_engine.cpp
potato/libecs/: CMakeLists.txt
potato/libeditor/: CMakeLists.txt
potato/libeditor/source/: asset_browser_popup.cpp  asset_edit_service.cpp  command.cpp  command_palette.cpp  desktop.posix.cpp  desktop.windows.cpp  editor.cpp  editor_manager.cpp  hotkeys.cpp  imgui_backend.cpp  imgui_command.cpp  imgui_ext.cpp  imgui_fonts.cpp  menu.cpp  project.cpp  property_grid.cpp  workspace.cpp
potato/libgame/: CMakeLists.txt
potato/libgame/schema/: components.sap
potato/libgame/source/: CMakeLists.txt  arcball.cpp  ecs_system.cpp  entity_id.h  entity_manager.cpp  shared_context.cpp  space.cpp  universe.cpp  world.cpp
potato/libgame/source/components/: CMakeLists.txt  components.cpp
potato/libgame/source/systems/: CMakeLists.txt  camera_system.cpp  demo_system.cpp  demo_system.h  physics_system.cpp  render_system.cpp  render_system.h  transform_system.cpp  transform_system.h
potato/libgame/tests/: CMakeLists.txt  test_components.h  test_entity_manager.cpp  test_query.cpp  test_world.cpp
potato/libimport/: CMakeLists.txt
potato/libposql/: CMakeLists.txt
potato/librecon/: CMakeLists.txt
potato/librecon/source/: recon_client.cpp  recon_protocol.cpp  recon_server.cpp
potato/libreflex/: CMakeLists.txt
potato/libreflex/schema/: common.sap  tools.sap
potato/libreflex/source/: serialize.cpp
potato/libreflex/tests/: test_schema.cpp  test_serialize.cpp
potato/librender/: CMakeLists.txt
potato/librender/data/shaders/: debug.hlsl  imgui.hlsl
potato/librender/schema/: material.sap
potato/librender/source/: camera.cpp  context.cpp  debug_draw.cpp  image.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp
potato/librender/source/d3d11_backend/: CMakeLists.txt  d3d11_buffer.cpp  d3d11_buffer.h  d3d11_command_list.cpp  d3d11_command_list.h  d3d11_debug_draw_renderer.cpp  d3d11_debug_draw_renderer.h  d3d11_device.cpp  d3d11_device.h  d3d11_factory.h  d3d11_imgui_renderer.cpp  d3d11_imgui_renderer.h  d3d11_pipeline_state.cpp  d3d11_pipeline_state.h  d3d11_platform.cpp  d3d11_platform.h  d3d11_resource_view.cpp  d3d11_resource_view.h  d3d11_sampler.cpp  d3d11_sampler.h  d3d11_swap_chain.cpp  d3d11_swap_chain.h  d3d11_texture.cpp  d3d11_texture.h
potato/librender/source/d3d12_backend/: CMakeLists.txt  d3d12_buffer.cpp  d3d12_buffer.h  d3d12_command_list.cpp  d3d12_command_list.h  d3d12_context.cpp  d3d12_context.h  d3d12_desc_heap.cpp  d3d12_desc_heap.h  d3d12_device.cpp  d3d12_device.h  d3d12_factory.cpp  d3d12_factory.h  d3d12_pipeline_state.cpp  d3d12_pipeline_state.h  d3d12_platform.cpp  d3d12_platform.h  d3d12_renderable.cpp  d3d12_renderable.h  d3d12_resource_view.cpp  d3d12_resource_view.h  d3d12_root_signature.cpp  d3d12_root_signature.h  d3d12_sampler.cpp  d3d12_sampler.h  d3d12_swap_chain.cpp  d3d12_swap_chain.h  d3d12_texture.cpp  d3d12_texture.h  d3d12_utils.h
potato/librender/source/null_backend/: CMakeLists.txt  (+2 more)
potato/libruntime/: CMakeLists.txt
potato/libruntime/source/: CMakeLists.txt  asset_loader.cpp  callstack.posix.cpp  callstack.windows.cpp  debug.cpp  debug.posix.cpp  debug.windows.cpp  filesystem.cpp  io_loop.cpp  json.cpp  logger.cpp  path.cpp  resource_manifest.cpp  stream.cpp  task_worker.cpp  thread_util.cpp  thread_util.windows.cpp  uuid.cpp  uuid.windows.cpp
potato/libruntime/support/: libruntime.natvis
potato/libruntime/tests/: CMakeLists.txt  test_thread_util.cpp
potato/libtools/: CMakeLists.txt
potato/spud/: CMakeLists.txt
potato/spud/support/: up_spud.natvis
potato/spud/tests/: test_fixed_string.cpp  test_hash_map.cpp  test_nameof.cpp  test_rc.cpp
(+218 files in other folders)
