add_subdirectory(bin_headerify)
add_subdirectory(bin_codegen)
add_subdirectory(spud)
add_subdirectory(libruntime)
add_subdirectory(libaudio)
add_subdirectory(libreflex)
add_subdirectory(librender)
add_subdirectory(libgame)
add_subdirectory(libeditor)
add_subdirectory(librecon)
add_subdirectory(bin_editor)
add_subdirectory(bin_recon)
